# firm-jsonschema

./: README.md  pyproject.toml
firm_jsonschema/: validation.py
scripts/: debug.py
tests/: test_validation.py
tests/schemas/: activity-schema.json  known-activities-schema.json  object-schema.json
